--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.proxydroid</groupId>
   <artifactId>proxydroid</artifactId>
-  <version>2.7.1</version>
+  <version>2.7.0</version>
   <packaging>apk</packaging>
   <name>ProxyDroid</name>
 
@@ -170,7 +170,8 @@
                         </outputApk>
                     </zipalign>
                     <sdk>
-                        <platform>14</platform>
+                        <platform>16</platform>
+                        <path>D:\Program Files\android-sdk</path>
                     </sdk>
                     <dex>
                         <coreLibrary>true</coreLibrary>
